# constitution-rag-ai-system

./: .gitignore  README.md  main.py  pyproject.toml
real/: db_parsing.py  document_parsing.py  model_initialization.py  retrieval_db.py
